# xfce4-hardware-monitor-plugin

./: .gitignore  ChangeLog  NEWS  README  README.md  configure.ac  module.xml
1.4.7/: xfce4-hardware-monitor-plugin_1.4.7-1_amd64.deb  xfce4-hardware-monitor-plugin_1.4.7-1_i386.deb  xfce4-hardware-monitor-plugin_1.4.7-2_amd64.deb  xfce4-hardware-monitor-plugin_1.4.7-2_i386.deb
1.5.0/: xfce4-hardware-monitor-plugin-dbgsym_1.5.0-1_amd64.deb  xfce4-hardware-monitor-plugin-dbgsym_1.5.0-1_i386.deb  xfce4-hardware-monitor-plugin_1.5.0-1_amd64.deb  xfce4-hardware-monitor-plugin_1.5.0-1_i386.deb
1.6.0/: xfce4-hardware-monitor-plugin-dbgsym_1.6.0-1_amd64_buster.deb  xfce4-hardware-monitor-plugin-dbgsym_1.6.0-1_amd64_stretch.deb  xfce4-hardware-monitor-plugin-dbgsym_1.6.0-1_i386_buster.deb  xfce4-hardware-monitor-plugin-dbgsym_1.6.0-1_i386_stretch.deb  xfce4-hardware-monitor-plugin_1.6.0-1_amd64_buster.deb  xfce4-hardware-monitor-plugin_1.6.0-1_amd64_stretch.deb  xfce4-hardware-monitor-plugin_1.6.0-1_i386_buster.deb  xfce4-hardware-monitor-plugin_1.6.0-1_i386_stretch.deb
centos/: xfce4-hardware-monitor-plugin.spec
debian/: changelog  control  copyright  watch
po/: POTFILES.in
src/: Makefile.am  applet.cpp  applet.hpp  bar-view.cpp  bar-view.hpp  canvas-view.cpp  canvas-view.hpp  choose-monitor-window.cpp  choose-monitor-window.hpp  column-view.cpp  column-view.hpp  curve-view.cpp  curve-view.hpp  flame-view.cpp  flame-view.hpp  gui-helpers.cpp  gui-helpers.hpp  helpers.cpp  helpers.hpp  i18n.hpp  monitor-impls.cpp  monitor-impls.hpp  monitor.hpp  pixbuf-drawing.hpp  plugin.cpp  plugin.hpp  preferences-window.cpp  preferences-window.hpp  register_plugin.c  text-view.cpp  text-view.hpp  ucompose.hpp  ui-libglade.glade  ui.glade  value-history.cpp  value-history.hpp  view.cpp  view.hpp
